:mag: :iphone: fixing search font size on mobile

--- a/wp-content/themes/eyebeam2019/style.css
+++ b/wp-content/themes/eyebeam2019/style.css
@@ -600,9 +600,6 @@ header nav li:last-child {
     margin: 0 8.333vw;
     margin-bottom: 1rem;
   }
-  header.headroom {
-    /*top: 32px;*/
-  }
   div.mobile-logo {
     padding: 1rem 0;
   }
@@ -1491,13 +1488,6 @@ footer form p {
     padding: 0 0 1rem 0;
     width: 100%;
   }
-  .hero-text h2 {
-    /*font-size: 72px;*/
-    /*font-size: 64px;*/
-    /*line-height: 72px;*/
-    /*line-height: 64px;*/
-    /*margin-bottom: 15px;*/
-  }
   .hero-text .text {
     /*font-size: 48px;*/
     font-size: 3rem;
@@ -1536,13 +1526,37 @@ footer form p {
      object-fit: cover;
 }
 
-.module .module-title {
+.module h2.module-title {
   font-size: 3rem;
-  line-height: 3.5rem;
+  line-height: 3.25rem;
   -webkit-box-flex: 1;
       -ms-flex: 1 0 100%;
           flex: 1 0 100%;
-  font-family: "EyebeamSans", sans-serif;
+}
+
+.module h3.module-title {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 100%;
+          flex: 1 0 100%;
+}
+
+@media (min-width: 768px) {
+  .module h2.module-title {
+    font-size: 3rem;
+    line-height: 3.25rem;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 100%;
+            flex: 1 0 100%;
+  }
+  .module h3.module-title {
+    font-size: 2rem;
+    line-height: 2.25rem;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 100%;
+            flex: 1 0 100%;
+  }
 }
 
 .module .module-subtitle {
@@ -1631,14 +1645,6 @@ footer form p {
   margin-bottom: 1rem;
 }
 
-.module-collection li .module-title {
-  /*	font-family: "Work Sans", sans-serif;
-	font-size: 40px;
-	line-height: 50px;
-	padding: 0;
-*/
-}
-
 h5.post-label, .label {
   margin: .5rem 0 0 0;
   padding: 0 .25rem;
@@ -1688,8 +1694,8 @@ h5.post-label, .label {
   margin-bottom: 1rem;
   font-size: 1.1rem;
   line-height: 1.6rem;
-  -moz-transition: height 300ms ease-out;
   -webkit-transition: height 300ms ease-out;
+  transition: height 300ms ease-out;
 }
 
 .module-collection li.show-bio .bio {
@@ -1697,8 +1703,8 @@ h5.post-label, .label {
   -webkit-hyphens: auto;
       -ms-hyphens: auto;
           hyphens: auto;
-  -moz-transition: height 300ms ease-out;
   -webkit-transition: height 300ms ease-out;
+  transition: height 300ms ease-out;
 }
 
 .module-ideas .ideas-title {
@@ -1896,17 +1902,6 @@ Events
   }
 }
 
-.module-collection ul {
-  /* display: inline-flex;
-	flex-wrap: wrap;
-	justify-content: left; */
-}
-
-.module-collection h4.module-title {
-  font-size: 1.3rem;
-  line-height: 1.6rem;
-}
-
 .module-frame .item-container .module-description {
   border: 4px solid #000;
   padding: 1rem;
@@ -1925,9 +1920,6 @@ Events
   .module-one_third {
     width: calc(33.33%);
     padding-right: 2rem;
-  }
-  .module-one_third:nth-child(3n) {
-    /*padding-right: 0 !important;*/
   }
   .module-one_third .module-title {
     font-size: 2rem;
@@ -2124,8 +2116,8 @@ Events
   }
   .module-collection h3.module-title,
   .module-collection h4.module-title {
-    font-size: 1.5rem;
-    line-height: 1.9rem;
+    font-size: 1.5rem !important;
+    line-height: 1.9rem !important;
     font-weight: 500;
     width: 100%;
     padding: .25rem 0 0 0;
@@ -2235,13 +2227,16 @@ Events
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 #search li {
   width: unset;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 33.333%;
-          flex: 1 0 33.333%;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 calc(100%);
+          flex: 0 0 calc(100%);
   margin-bottom: 1rem;
 }
 
@@ -2575,12 +2570,6 @@ Events
   }
 }
 
-.post .post-title {
-  font-size: 2rem;
-  line-height: 1.1em;
-  padding-top: 1rem;
-}
-
 .post-info {
   margin: 1rem 0;
 }
@@ -2590,7 +2579,6 @@ Events
   height: auto;
 }
 
-©
 .post .post-image {
   margin: 15px 0;
 }
@@ -2674,9 +2662,6 @@ figcaption {
   .post .featured-video iframe {
     width: 100%;
     height: calc(83.334vw / (16/9));
-  }
-  .post .post-image {
-    /*max-width: 700px;*/
   }
   .post .post-media {
     float: right;
